--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   
 }
+
+.myavatar
+{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
